if(USE_WS2812)
  set(EXTRA_WS2812 "_ws2812")
endif()
add_library(swindle_main STATIC)
target_link_libraries(swindle_main PRIVATE esprit_dev)
if(USE_RP2040 OR USE_RP2350)
  # RP2040 + W5500 variant — also needs WS2812 PIO for LED
  if(USE_RP_ZERO)
    tune_name(USE_RP_ZERO zero)
    set(ZERO_FLAGS _zero)
  endif()
  if(USE_RP_CARRIER)
    tune_name(USE_RP_CARRIER carrier)
  endif()
  rp_pio_generate(${CMAKE_CURRENT_SOURCE_DIR}/ws.pio ${CMAKE_BINARY_DIR}/ws.h)
  target_sources(swindle_main PRIVATE ${CMAKE_BINARY_DIR}/ws.h)
  if(SWINDLE_USE_W5500)
    target_sources(swindle_main PRIVATE  swindle_rp2040${ZERO_FLAGS}_w5500.cpp)
    target_include_directories(swindle_main PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../swindle/include)
    target_include_directories(swindle_main PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../swindle/src/net)
  else()
    # USB variant
    target_sources(swindle_main PRIVATE  swindle_rp2040${ZERO_FLAGS}.cpp )
  endif()
else()
  target_sources(swindle_main PRIVATE swindle_gd32${EXTRA_WS2812}.cpp)
endif()

