[package]
name = "rsbmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cty = "0.2.2"
rnarduino = { path = "../../lnArduino/rust/rnArduino", features = ["cdc"] }
ufmt = "*"
heapless = { version = "*", features = ["ufmt-impl"] }

[lib]
name = "rsbmp"
path = "src/lib.rs"
crate-type = ["staticlib"] # Creates static lib

[profile.dev]
#codegen-units = 0
debug = true
lto = false
opt-level       = 0

[profile.release]
#codegen-units = 0
debug = true
lto = false
opt-level       = 0
