[workspace]
members=["rs_swindle"]
resolver = "2"

[workspace.dependencies]

rust_esprit = { path = "../../esprit/rust/rust_esprit"}

[profile.dev]
debug = true
opt-level       = 2
panic = "abort"
#lto = false  # no lto
lto = "thin" # average
#lto = "fat"  # strong lto


[profile.release]
debug = true
opt-level       = 2
panic = "abort"
#lto = false  # no lto
lto = "thin" # average
#lto = "fat"  # strong lto


