[package]
name = "rsbmp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["rust_esprit"]
hosted = []

[dependencies]
cty = "0.2.2"
#rust_esprit = { path = "../../../esprit/rust/rust_esprit", features = ["cdc"] , optional = true}
rust_esprit = { path = "../../../esprit/rust/rust_esprit", optional = true }
ufmt = "*"
heapless = { version = "*", features = ["ufmt-impl"] }
numtoa = {version = "0.3.0"}
crc = { version ="3.0.1", features = []}
hashbrown = "0.15.2"
arraystring = { version = "*", default-features = false, features = [] }
strum = { version = "0.27.1", default-features = false, features = []}
strum_macros = { version = "0.27.1", default-features = false, features = []}
#
[lib]
name = "rsbmp"
path = "src/lib.rs"
crate-type = ["staticlib"] # Creates static lib

[profile.dev]
debug = true
lto = true
opt-level       = 2

[profile.release]
debug = true
lto = true
opt-level       = 2
