[package]
name = "rsbmp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["native"]
std = []
native = ["dep:rust_esprit"]
hosted = []


rp2040 = ["rust_esprit/rp2040"]
esp32 = ["rust_esprit/esp32"]
use_esprit = ["dep:rust_esprit"]


[dependencies]
cty = "0.2.2"
rust_esprit = { workspace = true, optional = true }
ufmt = { workspace = true } #version = "*", default-features = false }
heapless =  { workspace = true } #{ version = "*", features = ["ufmt-impl"] }
numtoa = {version = "0.3.0"}
crc = { version ="3.0.1", features = []}
hashbrown = "0.16.1"
arraystring = { version = "0.3.0", default-features = false, features = [] }
strum = { version = "0.27.2", default-features = false, features = []}
strum_macros = { version = "0.27.2", default-features = false, features = []}
#
[lib]
name = "rsbmp"
path = "src/lib.rs"
crate-type = ["rlib"] # Creates static lib

